--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/runtime": "^7.28.3",
     "@testing-library/react": "^11.0.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
