--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,8 @@
-name: Acciojob Tests
+steps:
+  - uses: actions/checkout@v3
 
-on:
- push:
-    branches: [ "main","master" ]
-
-jobs:
-  calling-acciojob-main-action:
-    uses: acciojob/acciojob-tests-action/.github/workflows/main-action.yml@main
-    secrets: inherit
+  - name: Setup Node.js
+    uses: actions/setup-node@v3
+    with:
+      node-version: "16.20.2"
+      cache: "npm"
