--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,10 @@
-steps:
-  - uses: actions/checkout@v3
+name: Acciojob Tests
 
-  - name: Setup Node.js
-    uses: actions/setup-node@v3
-    with:
-      node-version: "16.20.2"
-      cache: "npm"
+on:
+ push:
+    branches: [ "main","master" ]
+
+jobs:
+  calling-acciojob-main-action:
+    uses: acciojob/acciojob-tests-action/.github/workflows/main-action.yml@main
+    secrets: inherit
